--- a/sample-monetarium-wallet.conf
+++ b/sample-monetarium-wallet.conf
@@ -1,7 +1,7 @@
 [Application Options]
 
 ; ------------------------------------------------------------------------------
-; Decred wallet settings
+; Monetarium wallet settings
 ; ------------------------------------------------------------------------------
 
 ; Use testnet (cannot be used with simnet=1).
@@ -26,10 +26,10 @@
 ; The directory to open and save wallet, transaction, and unspent transaction
 ; output files.  Two directories, `mainnet` and `testnet` are used in this
 ; directory for mainnet and testnet wallets, respectively.
-; appdata=~/.dcrwallet
+; appdata=~/.monetarium-wallet
 
 ; Set txfee that will be used on startup.  They can be changed with
-; dcrctl --wallet settxfee as well
+; monetarium-ctl --wallet settxfee as well
 ; txfee=0.0001
 
 ; Set a number of unused address gap limit defined by BIP0044
@@ -47,11 +47,11 @@
 ; RPC client settings
 ; ------------------------------------------------------------------------------
 
-; The server and port used for dcrd websocket connections.
+; The server and port used for monetarium (node) websocket connections.
 ; rpcconnect=localhost:9109
 
-; File containing root certificates to authenticate TLS connections with dcrd
-; cafile=~/.dcrwallet/dcrd.cert
+; File containing root certificates to authenticate TLS connections with monetarium
+; cafile=~/.monetarium-wallet/dcrd.cert
 
 ; When enabled, do not perform any sync with the network, either through RPC or
 ; SPV modes. Useful when this is an air-gapped wallet.
@@ -77,7 +77,7 @@
 ; is enabled.
 ; circuitlimit=32
 
-; Never use configured proxy to dial dcrd websocket connectons.
+; Never use configured proxy to dial monetarium (node) websocket connections.
 ; nodcrdproxy=0
 
 
@@ -107,8 +107,8 @@
 ; ------------------------------------------------------------------------------
 
 ; TLS certificate and key file locations
-; rpccert=~/.dcrwallet/rpc.cert
-; rpckey=~/.dcrwallet/rpc.key
+; rpccert=~/.monetarium-wallet/rpc.cert
+; rpckey=~/.monetarium-wallet/rpc.key
 
 ; Curve to use when autogenerating TLS keypairs
 ; tlscurve=P-256
@@ -180,14 +180,14 @@
 ; RPC settings (both client and server)
 ; ------------------------------------------------------------------------------
 
-; Username and password to authenticate to a dcrd RPC server and authenticate
-; new client connections to dcrwallet.
+; Username and password to authenticate to a monetarium (node) RPC server and authenticate
+; new client connections to monetarium-wallet.
 ; username=
 ; password=
 
-; Alternative username and password for dcrd.  If set, these will be used
+; Alternative username and password for monetarium (node).  If set, these will be used
 ; instead of the username and password set above for authentication to a
-; dcrd RPC server.
+; monetarium (node) RPC server.
 ; dcrdusername=
 ; dcrdpassword=
 
